# tp5-rt

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.cache/clangd/index/: bound.h.F544F81BB2933482.idx  box.h.D4E4F8E06544FCAF.idx  def.h.8C7E2601E4459851.idx  frame.cpp.D6F646C5F2549D48.idx  frame.h.CBA5BE4BCB1654B1.idx  g3dm.h.3F8D8C9A7E11F0A5.idx  img.h.BDB20AD1B003A28F.idx  intersection.h.C5991D5B9026016C.idx  light_point.h.DD68406A81A0A8B6.idx  lights.h.20CAF58E8BF43E17.idx  lights_def.h.BAE6EDAEC5042DB3.idx  main.cpp.6158E65A000BC0EF.idx  mods.h.C9B43F8B8CDDDAFE.idx  mods_def.h.6FF352DF9D8BFA75.idx  mth.h.2C169DFD5B1EE700.idx  mth_camera.h.1004735D0A29D6C9.idx  mth_def.h.9F68E5BBDD2EBE64.idx  mth_matr.h.C7E3CB72A99A4A62.idx  mth_poly.h.532BB0E6FD7BAC07.idx  mth_ray.h.0BD69FFBDC29E7FF.idx  mth_vec2.h.A4E161B5C71F451E.idx  mth_vec3.h.CD28443A68F5FF2F.idx  mth_vec4.h.732E707ABDCDD524.idx  obj.h.B6AAEBC7D1C79D28.idx  plane.h.6BE09D9FE25DFE3F.idx  quadric.h.83567A841740C2E7.idx  rt.h.181F11473363E93C.idx  rt_def.h.21023764669A549D.idx  rt_scene.cpp.31B40B1964BC3B9A.idx  rt_scene.h.B442FACD9DD87700.idx  rt_win.cpp.557C87C4CF1C4D69.idx  rt_win.h.7F19045AC8104CEC.idx  shapes.h.1B32A7BCED1E66E5.idx  sphere.h.ED83AC6249CC66C1.idx  stb_image_write.h.051319FDC8FCA9EF.idx  (+5 more)
include/tp5/: rt.h
src/: def.h  main.cpp
src/frame/: frame.cpp  frame.h
src/mth/: mth.h  mth_camera.h  mth_def.h  mth_matr.h  mth_poly.h  mth_ray.h  mth_vec2.h  mth_vec3.h  mth_vec4.h
src/rt/: rt.h  rt_def.h  rt_mtl.h  rt_scene.cpp  rt_scene.h  rt_win.cpp  rt_win.h
src/win/: win.cpp  win.h
(+20 files in other folders)
